# GW2-ArcDPS-Boon-Table

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ArcDPS Boon Table.sln  ArcDPS Boon Table.sln.DotSettings  ArcdpsDemoProject.sln  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  README.MD  arcdps_table_lang_en.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build_release.yml
ArcDPS Boon Table/: AppChart.cpp  AppChart.h  ArcDPS Boon Table.aps  ArcDPS Boon Table.rc  ArcDPS Boon Table.vcxproj  ArcDPS Boon Table.vcxproj.filters  ArcdpsDataStructures.cpp  ArcdpsDataStructures.h  Boon.cpp  Boon.h  BoonDef.cpp  BoonWindow.h  BoonWindowHandler.cpp  BoonWindowTable.cpp  BuffIds.cpp  BuffIds.h  CMakeLists.txt  Entity.cpp  Entity.h  EntityHistory.cpp  EntityHistory.h  GlobalObjects.cpp  GlobalObjects.h  Helpers.cpp  Helpers.h  History.cpp  History.h  IEntity.h  IPlayer.h  ITracker.h  KeysDown.h  Lang.cpp  Lang.h  NPC.cpp  NPC.h  Player.cpp  Player.h  PlayerHistory.cpp  PlayerHistory.h  Settings.cpp  (+17 more)
ArcDPS Boon Table Lib/: ArcDPS Boon Table Lib.vcxproj  ArcDPS Boon Table Lib.vcxproj.filters  Boon.cpp  Boon.h  BoonDef.h  BoonWindow.cpp  BoonWindow.h  BoonWindowHandler.cpp  BoonWindowHandler.h  BoonWindowTable.h  CMakeLists.txt  GlobalObjects.cpp  GlobalObjects.h  History.cpp  History.h  HistoryPlayer.cpp  HistoryPlayer.h  HistoryTracker.cpp  HistoryTracker.h  IPlayer.h  ITracker.h  Logger.cpp  Logger.h  Player.cpp  Player.h  Settings.h  Tracker.cpp  Tracker.h  libmain.cpp  vcpkg-configuration.json  vcpkg.json
ArcDPS Boon Table Lib/Activity/: Activities.h  IActivityTracker.cpp  IActivityTracker.h  IffActivity.cpp  IffActivity.h  IffNpcTracker.h  NpcUpdateTracker.cpp  NpcUpdateTracker.h  RaidActivity.cpp  RaidActivity.h  RaidNpcTracker.cpp  RaidNpcTracker.h  TestActivity.h
ArcDPS Boon Table Tests/: ArcDPS Boon Table Tests.vcxproj  ArcDPS Boon Table Tests.vcxproj.filters  BoonTests.cpp  CMakeLists.txt  EntireTests.cpp  GeneralTests.cpp  Helper.h  HistoryTests.cpp  HistoryTests.h  TestMain.cpp  vcpkg-configuration.json  vcpkg.json
ArcDPS Boon Table Tests/TestLogs/: HistoryTests.tar.xz  boontable.tmp.ods  packLogs.ps1  packLogs.sh  unpackLogs.ps1  unpackLogs.sh
ArcDPS Boon Table Tests/arcdps_mock/: CombatMock.cpp  CombatMock.h  Xevtc.h
ArcDPS Boon Table/BigTable/: BigTable.cpp  BigTable.h
ArcdpsDemoProject/: ArcdpsDemoProject.vcxproj  ArcdpsDemoProject.vcxproj.filters  Directory.Build.props.example  EventWindow.cpp  EventWindow.h  dllmain.cpp  global.cpp  global.h
localization/: arcdps_table_lang.ini
readmes/: README_fr.MD
translations/: arcdps_table_lang_fr.ini
